--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==0.5.0
 Django==3.1
 django-crispy-forms==1.9.2
 django-heroku==0.3.1
+djangorestframework==3.11.1
 gunicorn==20.0.4
 heroku==0.1.4
 idna==2.10
